tests/mysql/ui-common/caveat_string_literal_colon.stderr
error: sql_forge!: parameter :def has no mapping
 --> tests/mysql/tmp-ui/caveat_string_literal_colon.rs:9:9
  |
9 |         r#"SELECT id, name FROM users WHERE name = "abc:def""#,
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
